// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picks out chinese words 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "is_word": null,
    "next": {
      "五": Trie {
        "data": [],
        "is_word": null,
        "next": {
          "毛": Trie {
            "data": [],
            "is_word": null,
            "next": {
              "党": Trie {
                "data": [
                  undefined,
                ],
                "is_word": true,
                "next": {},
                "value": "五毛党",
              },
            },
            "value": "五毛",
          },
        },
        "value": "五",
      },
      "党": Trie {
        "data": [],
        "is_word": null,
        "next": {
          "国": Trie {
            "data": [
              undefined,
            ],
            "is_word": true,
            "next": {},
            "value": "党国",
          },
        },
        "value": "党",
      },
      "国": Trie {
        "data": [],
        "is_word": null,
        "next": {
          "家": Trie {
            "data": [
              undefined,
            ],
            "is_word": true,
            "next": {},
            "value": "国家",
          },
        },
        "value": "国",
      },
      "毛": Trie {
        "data": [],
        "is_word": null,
        "next": {
          "五": Trie {
            "data": [],
            "is_word": null,
            "next": {
              "贴": Trie {
                "data": [
                  undefined,
                ],
                "is_word": true,
                "next": {},
                "value": "毛五贴",
              },
            },
            "value": "毛五",
          },
        },
        "value": "毛",
      },
      "黑": Trie {
        "data": [],
        "is_word": null,
        "next": {
          "手": Trie {
            "data": [],
            "is_word": null,
            "next": {
              "党": Trie {
                "data": [
                  undefined,
                ],
                "is_word": true,
                "next": {},
                "value": "黑手党",
              },
            },
            "value": "黑手",
          },
        },
        "value": "黑",
      },
    },
    "value": null,
  },
}
`;

exports[`Picks out chinese words 2`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "五": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "毛": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "五": Trie {
                  "data": [],
                  "fail": [Circular],
                  "is_word": null,
                  "next": {
                    "贴": Trie {
                      "data": [
                        undefined,
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {},
                      "value": "毛五贴",
                    },
                  },
                  "value": "毛五",
                },
              },
              "value": "毛",
            },
            "is_word": null,
            "next": {
              "党": Trie {
                "data": [
                  undefined,
                ],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "国": Trie {
                      "data": [
                        undefined,
                      ],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "家": Trie {
                            "data": [
                              undefined,
                            ],
                            "fail": null,
                            "is_word": true,
                            "next": {},
                            "value": "国家",
                          },
                        },
                        "value": "国",
                      },
                      "is_word": true,
                      "next": {},
                      "value": "党国",
                    },
                  },
                  "value": "党",
                },
                "is_word": true,
                "next": {},
                "value": "五毛党",
              },
            },
            "value": "五毛",
          },
        },
        "value": "五",
      },
      "党": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "国": Trie {
            "data": [
              undefined,
            ],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "家": Trie {
                  "data": [
                    undefined,
                  ],
                  "fail": null,
                  "is_word": true,
                  "next": {},
                  "value": "国家",
                },
              },
              "value": "国",
            },
            "is_word": true,
            "next": {},
            "value": "党国",
          },
        },
        "value": "党",
      },
      "国": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "家": Trie {
            "data": [
              undefined,
            ],
            "fail": null,
            "is_word": true,
            "next": {},
            "value": "国家",
          },
        },
        "value": "国",
      },
      "毛": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "五": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "毛": Trie {
                  "data": [],
                  "fail": [Circular],
                  "is_word": null,
                  "next": {
                    "党": Trie {
                      "data": [
                        undefined,
                      ],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "国": Trie {
                            "data": [
                              undefined,
                            ],
                            "fail": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "家": Trie {
                                  "data": [
                                    undefined,
                                  ],
                                  "fail": null,
                                  "is_word": true,
                                  "next": {},
                                  "value": "国家",
                                },
                              },
                              "value": "国",
                            },
                            "is_word": true,
                            "next": {},
                            "value": "党国",
                          },
                        },
                        "value": "党",
                      },
                      "is_word": true,
                      "next": {},
                      "value": "五毛党",
                    },
                  },
                  "value": "五毛",
                },
              },
              "value": "五",
            },
            "is_word": null,
            "next": {
              "贴": Trie {
                "data": [
                  undefined,
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "毛五贴",
              },
            },
            "value": "毛五",
          },
        },
        "value": "毛",
      },
      "黑": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "手": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "党": Trie {
                "data": [
                  undefined,
                ],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "国": Trie {
                      "data": [
                        undefined,
                      ],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "家": Trie {
                            "data": [
                              undefined,
                            ],
                            "fail": null,
                            "is_word": true,
                            "next": {},
                            "value": "国家",
                          },
                        },
                        "value": "国",
                      },
                      "is_word": true,
                      "next": {},
                      "value": "党国",
                    },
                  },
                  "value": "党",
                },
                "is_word": true,
                "next": {},
                "value": "黑手党",
              },
            },
            "value": "黑手",
          },
        },
        "value": "黑",
      },
    },
    "value": null,
  },
}
`;

exports[`Picks out chinese words 3`] = `
{
  "count": {
    "五毛党": 1,
    "党国": 1,
    "国家": 1,
    "毛五贴": 1,
  },
  "data": {
    "五毛党": [
      undefined,
    ],
    "党国": [
      undefined,
    ],
    "国家": [
      undefined,
    ],
    "毛五贴": [
      undefined,
    ],
  },
  "matches": {
    "五毛党": [
      5,
    ],
    "党国": [
      7,
    ],
    "国家": [
      8,
    ],
    "毛五贴": [
      2,
    ],
  },
  "positions": {
    "2": [
      "毛五贴",
    ],
    "5": [
      "五毛党",
    ],
    "7": [
      "党国",
    ],
    "8": [
      "国家",
    ],
  },
}
`;
